Adding initial Aptana Studio 3 bundle.